# quick-api

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  PACKAGE_OVERVIEW.md  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  test_quick.py
examples/: basic_sklearn_example.py  cli_example.py  custom_preprocessing_example.py  tensorflow_example.py
quick_api/: __init__.py  api.py  cli.py  core.py  model_loader.py  utils.py
tests/: conftest.py  test_api.py  test_core.py  test_model_loader.py  test_utils.py
