[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-api"
version = "0.1.0"
description = "Turn a Model into an API in One Line"
readme = "README.md"
authors = [
    {name = "Abhishek Nair", email = "abhishek.naiir@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "numpy>=1.19.0",
    "scikit-learn>=0.24.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
tensorflow = [
    "tensorflow>=2.6.0",
    "keras>=2.6.0",
]
pytorch = [
    "torch>=1.9.0",
]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "httpx>=0.24.0",
]
all = [
    "quick-api[tensorflow,pytorch,dev]"
]

[project.urls]
Homepage = "https://github.com/AbhishekNair050/quick-api"
Documentation = "https://github.com/AbhishekNair050/quick-api#readme"
Repository = "https://github.com/AbhishekNair050/quick-api"
"Bug Tracker" = "https://github.com/AbhishekNair050/quick-api/issues"

[project.scripts]
quick-api = "quick_api.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quick_api*"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
